# concisely-bot

./: .gitignore  Dockerfile  Dockerfile.archiver  docker-compose.yml  package.json  prompt.md  pyproject.toml  readme.md  tsconfig.json
scripts/: archive-logs.sh
src/: __main__.py  config.py  db.py  handlers.py  llm.py  test_prompt.py  utils.py
src-ts/: bot.ts  config.ts  db.ts  handlers.ts  index.ts  llm.ts  test-prompt.ts  utils.ts
